# WifeyMOOC

./: .gitignore  CMakeLists.txt  PAPER_PRINTING_GUIDE.md  README.md  droptag.cpp  flashcardsession.cpp  flashcardsession.h  flashcardwidget.cpp  flashcardwidget.h  json_to_paper.py  main.cpp  mediahandler.cpp  mediahandler.h  parleyparser.cpp  parleyparser.h  questionhandlers.cpp  questionhandlers.h  resources.qrc  testfile-complete.json  wifeymooc-python1.2.py  wifeymooc-python2.py  wifeymooc.desktop  wifeymooc4.py  wifeymooc_json_editor.py  wifeymoocapp.cpp  wifeymoocapp.h
Sample Exercise/: A2-1-PrideAvecMaPetiteAmie.json
android/: AndroidManifest.xml
android/src/net/wifey/wifeymooc/: WifeyUtils.java
